2003-08-12  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* configure.in: Update version number to
	5.2a1.

2003-08-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.am: Include NEWS in the set of files
	that get copied into the install location.
	* Makefile.in: Regen.
	* NEWS: Add list of features added for 5.2a2.
	* mkdist.sh: Copy NEWS file into dist dir.

2003-08-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* snavigator/win/snavigator.rc:
	* snavigator/win/snavwindres.rc:
	Oops, fix typo in file name from last checkin.

2003-08-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* bitmaps/Makefile.am: Copy sourcenav.ico to
	the install dir so that it can be loaded
	at runtime via wm iconbitmap.
	* bitmaps/Makefile.in: Regen.
	* bitmaps/sourcenav.ico: Add new SN Win32 icon.
	* gui/sninit.tcl (sn_tcl_tk_init): Call
	wm iconbitmap to set sourcenav.ico as the
	default icon bitmap.
	* snavigator/win/Makefile.am: Copy sourcenav.ico
	to the build dir before creating resource that
	includes the icon for the executable.
	* snavigator/win/Makefile.in: Regen.
	* snavigator/win/icon1.ico: Remove older and
	uglier SN icon.
	* snavigator/win/snavigator.rc: Use sourcenav.ico
	instead of older icon1.ico.
	* snavigator/win/snavwindres.rc: Use sourcenav.ico
	instead of older icon1.ico.

2003-08-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/sninit.tcl (sn_tcl_tk_init): Use default
	border width of 1 for all widgets. This change
	makes the application look more "modern" since
	it more closely matches the look under Windows.

2003-08-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/retrieverpane.tcl (constructor): Remove
	highlight set cmd so that the pattern in a symbol
	browser or retriever will not appear selected.
	This is confusing because the list has the
	focus even though the pattern appears to.

2003-08-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/tree.tcl (constructor, propagate):